# genetics-classifier

./: .gitignore  README.md  autoencoder.py  baseline_mlp.py  main.py  preprocessing.py  pyproject.toml
